--- a/src/App.css
+++ b/src/App.css
@@ -97,18 +97,22 @@ button {
     }
 }
 
-/* screens larger than 320px wide and up to 768px wide */
-@media only screen and (min-width: 321px) and (max-width:768px) {
+/* screens larger than 320px wide */
+@media only screen and (min-width: 321px) {
     .characterContainer {
         width: 18rem;
         max-width: 18rem;
     }
+
+    .charactersCardsContainer {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        max-width: 100vw;
+
+    }
 }
 
 /* screens 768px and above */
-@media only screen and (min-width: 769px) {
-    .characterContainer {
-        width: 40rem;
-        max-width: 45rem;
-    }
-}
+@media only screen and (min-width: 769px) {}
